tests/invalid/borrow_conflict/field_shared_then_mut.facet
struct Pair {
  mut x: unrestricted isize,
  y: unrestricted bool
}

fn main() -> unrestricted () {
  let mut p: unrestricted Pair = Pair { x = 1, y = true };
  let _ = (&p.x);
  let _ = (&mut p.x);
  ()
}
